--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,15 +1,143 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register
+{% block meta %}
+	<meta name="description" content="">
+	<meta name="keywords" content="">
+{% endblock %}
+
+{% block title %}
+	recruitment & services
+{% endblock %}
+
+{% block css %}
+	{{ include('partials/scripts-header.html.twig') }}
+
+	<style>
+		.page-title-bg {
+			background-image: url('/assets/img/bg3.jpg');
+		}
+		.log-section form .checkbox label {
+			font-size: 16px
+		}
+		.log-section form .checkbox label a {
+			color: #b6a575;
+			text-decoration: underline;
+			text-transform: inherit;
+			font-size: 16px
+		}
+		.log-section form .links a {
+			display: block;
+			text-align: center;
+			color: #b6a575;
+			text-decoration: underline;
+			text-transform: inherit;
+			font-size: 16px
+		}
+	</style>
 {% endblock %}
 
 {% block body %}
+	{{ include('partials/header.html.twig') }}
+
+
+	<div
+		class="base">
+
+		<!-- Page -->
+		<div
+			class="page">
+
+			<!-- Page Header-->
+			<section class="page-title page-title-bg fixed-bg overlay dark-5 padding-top-160 padding-bottom-80">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-12">
+							<h2 class="white-text">Register</h2>
+							<span class="white-text">Welcome on board</span>
+							<ol class="breadcrumb">
+								<li>
+									<a href="{{ path('app_home') }}">Home</a>
+								</li>
+								<li class="active">Register</li>
+							</ol>
+						</div>
+					</div>
+				</div>
+			</section>
+
+
+			<!-- Page Content-->
+			<section class="section-padding gray-bg log-section">
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-12 col-sm-6 col-sm-offset-3 card card-panel">
+							<h3 class="text-extrabold">Create a new account</h3>
+							{{ form_start(registrationForm) }}
+							{{ form_errors(registrationForm) }}
+							{# <form id="register-form" role="form" method="post" accept-char="UTF-8" autocomplete="off" data-parsley-validate> #}
+
+								<div class="input-field">
+								{{ form_widget(registrationForm.email) }}
+									{# <input type="email" name="email" id="email" value="" required data-parsley-trigger="change" data-parsley-error-message="A valid email address is required."> #}
+									<label for="email">Email</label>
+									<span class="help-block">Type your email address.</span>
+								</div>
+								<div class="input-field">
+								{{ form_widget(registrationForm.plainPassword.first) }}
+									{# <input type="password" name="password" id="password" value="" required data-parsley-trigger="change" data-parsley-minlength="6" data-parsley-error-message="The password must be at least 6 characters."> #}
+									<label for="plainPassword">Password</label>
+									<i class="fa fa-eye show-password"></i>
+									<span class="help-block">Type your password.</span>
+								</div>
+								<div class="input-field">
+								{{ form_widget(registrationForm.plainPassword.second) }}
+									{# <input type="password" name="password_confirmation" id="password_confirmation" value="" required data-parsley-trigger="change" data-parsley-equalto="#password" data-parsley-error-message="Password does not match."> #}
+									<label for="password_confirmation">Confirm Password</label>
+									<i class="fa fa-eye show-password"></i>
+									<span class="help-block">Confirm your password.</span>
+								</div>
+								<div class="checkbox">
+								{{ form_widget(registrationForm.agreeTerms) }}
+									{# <input type="checkbox" name="accept-terms" value="1" id="accept-terms" required/> #}
+									<label for="aggreeTerms">I have read and I accept the
+										<a href="#!" target="_blank">Terms Of Use</a>
+									</label>
+								</div>
+
+								<button type="submit" class="btn btn-lg gradient secondary btn-block waves-effect waves-light mt-20 mb-20">Create an account</button>
+								<div class="links">
+									<a href="{{ path('app_login') }}">Already have an account? Click here</a>
+								</div>
+							{# </form> #}
+							{{ form_end(registrationForm) }}
+						</div>
+
+					</div>
+				</div>
+			</section>
+
+		</div>
+
+	</div>
+
+
+	{{ include('partials/footer.html.twig') }}
+
+	{% block js %}
+		<script type="text/javascript">
+
+			onAppReady(function () {
+$('.preload').remove();
+});
+		</script>
+	{% endblock %}
+{# 
 	<h1>Register</h1>
 
 	{{ form_errors(registrationForm) }}
+	{{ form_errors(registrationForm) }}
 
 	{{ form_start(registrationForm) }}
-	{{ form_row(registrationForm.name) }}
 	{{ form_row(registrationForm.email) }}
 	{{ form_row(registrationForm.plainPassword, {
             label: 'Password'
@@ -17,5 +145,6 @@
 	{{ form_row(registrationForm.agreeTerms) }}
 
 	<button type="submit" class="btn">Register</button>
-	{{ form_end(registrationForm) }}
+	{{ form_end(registrationForm) }} #}
+
 {% endblock %}
