--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,31 +1,110 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}
+	recruitment & services
+{% endblock %}
+
+{% block css %}
+	{{ include('partials/scripts-header.html.twig') }}
+{% endblock %}
 
 {% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+	{{ include('partials/header.html.twig') }}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+	{% if error %}
+		<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+	{% endif %}
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+	{% if app.user %}
+		<div class="mb-3">
+			You are logged in as
+			{{ app.user.userIdentifier }},
+			<a href="{{ path('app_logout') }}">Logout</a>
+		</div>
+	{% endif %}
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
-</form>
+
+	<div
+		class="base">
+
+		<!-- Page -->
+		<div
+			class="page">
+
+			<!-- Page Header-->
+			<section class="page-title page-title-bg fixed-bg overlay dark-5 padding-top-160 padding-bottom-80">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-12">
+							<h2 class="white-text">Login</h2>
+							<span class="white-text">Welcome on board</span>
+							<ol class="breadcrumb">
+								<li>
+									<a href="{{ path('app_home') }}">Home</a>
+								</li>
+								<li class="active">Login</li>
+							</ol>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- Page Content-->
+			<section class="section-padding gray-bg log-section">
+				<div class="container">
+					<div class="row">
+
+						<div class="col-xs-12 col-sm-6 col-md-4">
+							<div class="card card-panel">
+								<h3 class="text-extrabold">Log in to your account</h3>
+								<form id="login-form" role="form" method="post" accept-char="UTF-8" autocomplete="off" data-parsley-validate>
+
+									<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+									<div class="input-field">
+										<input type="email" name="email" id="email" value="{{ last_username }}" required autofocus data-parsley-trigger="change" data-parsley-error-message="A valid email address is required.">
+										<label for="email">Email</label>
+										<span class="help-block">Type your email address.</span>
+									</div>
+									<div class="input-field">
+										<input type="password" name="password" id="password" required data-parsley-trigger="change" data-parsley-error-message="The password must be at least 6 characters.">
+										<label for="password">Password</label>
+										<i class="fa fa-eye show-password"></i>
+										<span class="help-block">Type your password.</span>
+									</div>
+									<div class="checkbox">
+										<input type="checkbox" id="keep-logged" name="remember" value="1"/>
+										<label for="keep-logged">Keep me logged in</label>
+									</div>
+									<button type="submit" class="btn btn-lg gradient secondary btn-block waves-effect waves-light mt-20 mb-20">Login</button>
+									<div class="links">
+										<a href="{{ path('app_home') }}">Forgot your password?</a>
+									</div>
+								</form>
+							</div>
+						</div>
+
+						<div class="col-xs-12 col-sm-6 col-md-8">
+							<div class="card card-panel ptb-70 text-center">
+								<div class="promo-info">
+									<h1 class="text-uppercase mb-30 text-extrabold font-30">New to Luxury Services ?</h1>
+									<p class="width-60 mb-30">Joining us is allowing our recruitment expertise and personal guidance to bring the best out in you by choosing the most suited position.</p>
+									<a href="{{ path('app_register') }}" class="btn btn-lg gradient secondary waves-effect waves-light mt-20">
+										<span>Sign-up<strong>
+												Free</strong>
+										</span>
+									</a>
+								</div>
+							</div>
+						</div>
+
+					</div>
+				</div>
+			</section>
+		</div>
+	</div>
+
+
+	{{ include('partials/footer.html.twig') }}
+	{{ include('partials/scripts-footer.html.twig') }}
 {% endblock %}
