--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -36,7 +36,7 @@
 								</li>
 								<li>-</li>
 								<li>
-									<a href="{{ path('app_home') }}">Profile</a>
+									<a href="{{ path('app_profile') }}">Profile</a>
 								</li>
 								<li>
 									<a href="{{ path('app_logout') }}">Logout</a>
