Update links in pages

--- a/templates/public/contact.html.twig
+++ b/templates/public/contact.html.twig
@@ -118,7 +118,7 @@
 									<i class="material-icons brand-color">&#xE0E1;</i>
 									<div class="mail">
 										<p>
-											<a href="#!">georges[a]luxuryservices.com</a>
+											<a href="mailto:georges@luxuryservices.com">georges[a]luxuryservices.com</a>
 										</p>
 									</div>
 								</address>
