--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -53,7 +53,7 @@
 					</a>
 				</li>
 				<li class=" dropdown">
-					<a target="_self" href="/template/jobs/jobs.html">
+					<a target="_self" href="{{ path('app_job_offer_index') }}">
 						<span>Jobs offers</span>
 					</a>
 				</li>
