--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -26,7 +26,7 @@
 									<a href="{{ path('app_home') }}">Home</a>
 								</li>
 								<li>
-									<a href="{{ path('app_home') }}">Jobs Offers</a>
+									<a href="{{ path('app_job_offer_index') }}">Jobs Offers</a>
 								</li>
 								<li>
 									<a href="{{ path('app_about') }}">About Us</a>
@@ -67,7 +67,7 @@
 							</a>
 						</li>
 						<li class=" dropdown">
-							<a target="_self" href="{{ path('app_home') }}">
+							<a target="_self" href="{{ path('app_job_offer_index') }}">
 								<i class=""></i>
 								<span>Jobs offers</span>
 							</a>
