--- a/templates/public/index.html.twig
+++ b/templates/public/index.html.twig
@@ -51,7 +51,7 @@
 
 							<!-- LAYER NR. 3 -->
 							<div class="tp-caption tp-resizeme rev-btn" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['130','130','130','150']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-style_hover="cursor:default;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:600;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="1200" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap;">
-								<a href="#job-offers" class="btn btn-lg gradient secondary waves-effect waves-light page-scroll">View Jobs</a>
+								<a href="{{ path('app_job_offer_index') }}" class="btn btn-lg gradient secondary waves-effect waves-light page-scroll">View Jobs</a>
 							</div>
 						</li>
 						<!-- slide 1 end -->
@@ -76,7 +76,7 @@
 
 							<!-- LAYER NR. 3 -->
 							<div class="tp-caption tp-resizeme rev-btn" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['130','130','140','170']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-style_hover="cursor:default;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:600;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="1200" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap;">
-								<a href="#job-offers" class="btn btn-lg gradient secondary waves-effect waves-light page-scroll">View Jobs</a>
+								<a href="{{ path('app_job_offer_index') }}" class="btn btn-lg gradient secondary waves-effect waves-light page-scroll">View Jobs</a>
 							</div>
 
 						</li>
@@ -148,7 +148,7 @@
 						</div>
 
 						<div class="text-center">
-							<a href="/templates/company.html" class="btn gradient secondary waves-effect waves-light mt-40">More about us</a>
+							<a href="{{ path('app_about') }}" class="btn gradient secondary waves-effect waves-light mt-40">More about us</a>
 						</div>
 					</div>
 				</div>
@@ -318,7 +318,7 @@
 						</div>
 
 						<div class="text-center">
-							<a href="/templates/jobs/index.html" class="btn gradient secondary waves-effect waves-light mt-30">View all job offers</a>
+							<a href="{{ path('app_job_offer_index') }}" class="btn gradient secondary waves-effect waves-light mt-30">View all job offers</a>
 						</div>
 					</div>
 				</div>
