--- a/templates/job_offer/show.html.twig
+++ b/templates/job_offer/show.html.twig
@@ -81,7 +81,11 @@
 									<li>
 										<span>
 											Salary
-										</span>{{ jobOffer.salary }} &euro;</li>
+											{% if jobOffer.salary %}
+												</span>{{ jobOffer.salary }} &euro;</li>
+											{% else %}
+												</span>-</li>
+											{% endif %}
 									<li>
 										<span>
 											Location
@@ -89,7 +93,11 @@
 									<li>
 										<span>
 											Starting date
-										</span>{{ jobOffer.closingDate|date('Y-m-d') }}</li>
+										{% if jobOffer.closingDate %}
+											</span>{{ jobOffer.closingDate|date('Y-m-d') }}</li>
+										{% else %}
+											</span>-</li>
+										{% endif %}
 								</ul>
 								<a class="btn btn-block gradient primary mt-30 waves-effect waves-light" href="#!">Apply for this job</a>
 								<div class="btn btn-block btn-success mt-30 waves-effect waves-light disabled">You have applied for this job</div>
