--- a/templates/public/index.html.twig
+++ b/templates/public/index.html.twig
@@ -190,128 +190,137 @@
 
 						<ul class="portfolio-filter brand-filter text-center">
 							<li class="active waves-effect waves-light" data-group="all">All</li>
-							<li class=" waves-effect waves-light" data-group="commercial">Commercial</li>
-							<li class=" waves-effect waves-light" data-group="retail">Retail sales</li>
-							<li class=" waves-effect waves-light" data-group="creative">Creative</li>
-							<li class=" waves-effect waves-light" data-group="technology">Technology</li>
-							<li class=" waves-effect waves-light" data-group="marketing">Marketing & PR</li>
-							<li class=" waves-effect waves-light" data-group="fashion">Fashion & luxury</li>
-							<li class=" waves-effect waves-light" data-group="management">Management & HR</li>
+							<li class=" waves-effect waves-light" data-group="Commercial">Commercial</li>
+							<li class=" waves-effect waves-light" data-group="Retail sales">Retail sales</li>
+							<li class=" waves-effect waves-light" data-group="Creative">Creative</li>
+							<li class=" waves-effect waves-light" data-group="Technology">Technology</li>
+							<li class=" waves-effect waves-light" data-group="Marketing & PR">Marketing & PR</li>
+							<li class=" waves-effect waves-light" data-group="Fashion & luxury">Fashion & luxury</li>
+							<li class=" waves-effect waves-light" data-group="Management & HR">Management & HR</li>
 						</ul>
 						<div class="portfolio portfolio-with-title col-2 gutter mt-30">
 
-							<div class="portfolio-item" data-groups='["all", "commercial"]'>
-								<div class="portfolio-wrapper">
-									<div class="card job-card">
-										<div class="card-content">
-											<span class="title">
-												<span class="card-title">2nd assistant position</span>
-												<span class="ref grey-text">Ref. 1062</span>
-											</span>
-											<div class="metas mb-20">
-												<div class="meta">
-													<i class="material-icons">&#xE53E;</i>45k&euro;
+							{% for job in jobOffers %}
+								<div class="portfolio-item" data-groups='["all", "{{ job.jobCategory.name }}"]'>
+									<div class="portfolio-wrapper">
+										<div class="card job-card">
+											<div class="card-content">
+												<span class="title">
+													<span class="card-title">{{ job.job }}</span>
+													<span class="ref grey-text">Ref.
+														{{ job.reference }}</span>
+												</span>
+												<div class="metas mb-20">
+													<div class="meta">
+														{% if job.salary %}
+															<i class="material-icons">&#xE53E;</i>
+															{{ job.salary }}&euro;
+														{% endif %}
+													</div>
+													<div class="meta">
+														<i class="material-icons">&#xE916;</i>
+														{{ job.createdAt|date('d/m/Y') }}
+													</div>
+													<div class="meta">
+														<i class="material-icons">&#xE55F;</i>
+														{{ job.location }}
+													</div>
 												</div>
-												<div class="meta">
-													<i class="material-icons">&#xE916;</i>2018-10-01
-												</div>
-												<div class="meta">
-													<i class="material-icons">&#xE55F;</i>Paris
-												</div>
+												<p class="truncate-text">Nulla interdum, erat et mollis eleifend, urna turpis pellentesque dolor, sed rhoncus erat est sit amet diam. Aliquam dignissim ipsum nec lorem pulvinar.</p>
 											</div>
-											<p class="truncate-text">Nulla interdum, erat et mollis eleifend, urna turpis pellentesque dolor, sed rhoncus erat est sit amet diam. Aliquam dignissim ipsum nec lorem pulvinar.</p>
-										</div>
-										<div class="card-action">
-											<a class="btn btn-md primary border waves-effect waves-dark" href="/templates/jobs/show.html">Details</a>
-											<a class="btn btn-md primary waves-effect waves-light" href="#!">Apply</a>
+											<div class="card-action">
+												<a class="btn btn-md primary border waves-effect waves-dark" href="{{ path('app_job_offer_show', {id: job.id}) }}">Details</a>
+												<a class="btn btn-md primary waves-effect waves-light" href="#!">Apply</a>
+											</div>
 										</div>
 									</div>
 								</div>
-							</div>
-							<div class="portfolio-item" data-groups='["all", "commercial"]'>
-								<div class="portfolio-wrapper">
-									<div class="card job-card">
-										<div class="card-content">
-											<span class="title">
-												<span class="card-title">2nd assistant position</span>
-												<span class="ref grey-text">Ref. 1062</span>
-											</span>
-											<div class="metas mb-20">
-												<div class="meta">
-													<i class="material-icons">&#xE53E;</i>45k&euro;
-												</div>
-												<div class="meta">
-													<i class="material-icons">&#xE916;</i>2018-10-01
-												</div>
-												<div class="meta">
-													<i class="material-icons">&#xE55F;</i>Paris
-												</div>
-											</div>
-											<p class="truncate-text">Nulla interdum, erat et mollis eleifend, urna turpis pellentesque dolor, sed rhoncus erat est sit amet diam. Aliquam dignissim ipsum nec lorem pulvinar.</p>
-										</div>
-										<div class="card-action">
-											<a class="btn btn-md primary border waves-effect waves-dark" href="/templates/jobs/show.html">Details</a>
-											<a class="btn btn-md primary waves-effect waves-light" href="#!">Apply</a>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="portfolio-item" data-groups='["all", "creative"]'>
-								<div class="portfolio-wrapper">
-									<div class="card job-card">
-										<div class="card-content">
-											<span class="title">
-												<span class="card-title">2nd assistant position</span>
-												<span class="ref grey-text">Ref. 1062</span>
-											</span>
-											<div class="metas mb-20">
-												<div class="meta">
-													<i class="material-icons">&#xE53E;</i>45k&euro;
-												</div>
-												<div class="meta">
-													<i class="material-icons">&#xE916;</i>2018-10-01
-												</div>
-												<div class="meta">
-													<i class="material-icons">&#xE55F;</i>Paris
-												</div>
-											</div>
-											<p class="truncate-text">Nulla interdum, erat et mollis eleifend, urna turpis pellentesque dolor, sed rhoncus erat est sit amet diam. Aliquam dignissim ipsum nec lorem pulvinar.</p>
-										</div>
-										<div class="card-action">
-											<a class="btn btn-md primary border waves-effect waves-dark" href="/templates/jobs/show.html">Details</a>
-											<a class="btn btn-md primary waves-effect waves-light" href="#!">Apply</a>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="portfolio-item" data-groups='["all", "commercial"]'>
-								<div class="portfolio-wrapper">
-									<div class="card job-card">
-										<div class="card-content">
-											<span class="title">
-												<span class="card-title">2nd assistant position</span>
-												<span class="ref grey-text">Ref. 1062</span>
-											</span>
-											<div class="metas mb-20">
-												<div class="meta">
-													<i class="material-icons">&#xE53E;</i>45k&euro;
-												</div>
-												<div class="meta">
-													<i class="material-icons">&#xE916;</i>2018-10-01
-												</div>
-												<div class="meta">
-													<i class="material-icons">&#xE55F;</i>Paris
-												</div>
-											</div>
-											<p class="truncate-text">Nulla interdum, erat et mollis eleifend, urna turpis pellentesque dolor, sed rhoncus erat est sit amet diam. Aliquam dignissim ipsum nec lorem pulvinar.</p>
-										</div>
-										<div class="card-action">
-											<a class="btn btn-md primary border waves-effect waves-dark" href="/templates/jobs/show.html">Details</a>
-											<a class="btn btn-md primary waves-effect waves-light" href="#!">Apply</a>
-										</div>
-									</div>
-								</div>
-							</div>
+							{% endfor %}
+
+							{# <div class="portfolio-item" data-groups='["all", "commercial"]'>
+																						<div class="portfolio-wrapper">
+																							<div class="card job-card">
+																								<div class="card-content">
+																									<span class="title">
+																										<span class="card-title">2nd assistant position</span>
+																										<span class="ref grey-text">Ref. 1062</span>
+																									</span>
+																									<div class="metas mb-20">
+																										<div class="meta">
+																											<i class="material-icons">&#xE53E;</i>45k&euro;
+																										</div>
+																										<div class="meta">
+																											<i class="material-icons">&#xE916;</i>2018-10-01
+																										</div>
+																										<div class="meta">
+																											<i class="material-icons">&#xE55F;</i>Paris
+																										</div>
+																									</div>
+																									<p class="truncate-text">Nulla interdum, erat et mollis eleifend, urna turpis pellentesque dolor, sed rhoncus erat est sit amet diam. Aliquam dignissim ipsum nec lorem pulvinar.</p>
+																								</div>
+																								<div class="card-action">
+																									<a class="btn btn-md primary border waves-effect waves-dark" href="/templates/jobs/show.html">Details</a>
+																									<a class="btn btn-md primary waves-effect waves-light" href="#!">Apply</a>
+																								</div>
+																							</div>
+																						</div>
+																					</div>
+																					<div class="portfolio-item" data-groups='["all", "creative"]'>
+																						<div class="portfolio-wrapper">
+																							<div class="card job-card">
+																								<div class="card-content">
+																									<span class="title">
+																										<span class="card-title">2nd assistant position</span>
+																										<span class="ref grey-text">Ref. 1062</span>
+																									</span>
+																									<div class="metas mb-20">
+																										<div class="meta">
+																											<i class="material-icons">&#xE53E;</i>45k&euro;
+																										</div>
+																										<div class="meta">
+																											<i class="material-icons">&#xE916;</i>2018-10-01
+																										</div>
+																										<div class="meta">
+																											<i class="material-icons">&#xE55F;</i>Paris
+																										</div>
+																									</div>
+																									<p class="truncate-text">Nulla interdum, erat et mollis eleifend, urna turpis pellentesque dolor, sed rhoncus erat est sit amet diam. Aliquam dignissim ipsum nec lorem pulvinar.</p>
+																								</div>
+																								<div class="card-action">
+																									<a class="btn btn-md primary border waves-effect waves-dark" href="/templates/jobs/show.html">Details</a>
+																									<a class="btn btn-md primary waves-effect waves-light" href="#!">Apply</a>
+																								</div>
+																							</div>
+																						</div>
+																					</div>
+																					<div class="portfolio-item" data-groups='["all", "commercial"]'>
+																						<div class="portfolio-wrapper">
+																							<div class="card job-card">
+																								<div class="card-content">
+																									<span class="title">
+																										<span class="card-title">2nd assistant position</span>
+																										<span class="ref grey-text">Ref. 1062</span>
+																									</span>
+																									<div class="metas mb-20">
+																										<div class="meta">
+																											<i class="material-icons">&#xE53E;</i>45k&euro;
+																										</div>
+																										<div class="meta">
+																											<i class="material-icons">&#xE916;</i>2018-10-01
+																										</div>
+																										<div class="meta">
+																											<i class="material-icons">&#xE55F;</i>Paris
+																										</div>
+																									</div>
+																									<p class="truncate-text">Nulla interdum, erat et mollis eleifend, urna turpis pellentesque dolor, sed rhoncus erat est sit amet diam. Aliquam dignissim ipsum nec lorem pulvinar.</p>
+																								</div>
+																								<div class="card-action">
+																									<a class="btn btn-md primary border waves-effect waves-dark" href="/templates/jobs/show.html">Details</a>
+																									<a class="btn btn-md primary waves-effect waves-light" href="#!">Apply</a>
+																								</div>
+																							</div>
+																						</div>
+																					</div> #}
 
 							<div class="no-item"></div>
 
