--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -12,13 +12,15 @@
 						<span class="middle"></span>
 						<span class="bottom"></span>
 					</div>
+					{% if app.user %}
 					<div class="icon-wrapper">
 						<span class="account">
-							<a href="{{ path('app_home') }}">
+							<a href="{{ path('app_profile') }}">
 								<i class="material-icons">&#xE7FD;</i>
 							</a>
 						</span>
 					</div>
+					{% endif %}
 					<div class="nav-overlay" id="overlay">
 						<nav class="overlay-menu">
 							<ul>
@@ -35,17 +37,27 @@
 									<a href="{{ path('app_contact') }}">Contact</a>
 								</li>
 								<li>-</li>
-								<li>
-									<a href="{{ path('app_profile') }}">Profile</a>
-								</li>
-								<li>
-									<a href="{{ path('app_logout') }}">Logout</a>
-								</li>
+								{% if app.user %}
+									<li>
+										<a href="{{ path('app_profile') }}">Profile</a>
+									</li>
+									<li>
+										<a href="{{ path('app_logout') }}">Logout</a>
+									</li>
+								{% else %}
+									<li>
+										<a href="{{ path('app_login') }}">Login</a>
+									</li>
+									<li>
+										<a href="{{ path('app_register') }}">Sign Up</a>
+									</li>
+								{% endif %}
 							</ul>
 						</nav>
 					</div>
 				</div>
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					{% if app.user == null %}
 					<ul class="menuzord-menu pull-right light" role="navigation">
 						<li class=" dropdown">
 							<a target="_self" href="{{ path('app_login') }}">
@@ -59,6 +71,7 @@
 
 						</li>
 					</ul>
+					{% endif %}
 					<ul class="menuzord-menu pull-right light" role="navigation">
 						<li class="active dropdown">
 							<a target="_self" href="{{ path('app_home') }}">
@@ -84,6 +97,14 @@
 								<span>Contact</span>
 							</a>
 						</li>
+						{% if app.user %}
+							<li>
+								<a href="{{ path('app_profile') }}">Profile</a>
+							</li>
+							<li>
+								<a href="{{ path('app_logout') }}">Logout</a>
+							</li>
+						{% endif %}
 					</ul>
 				</div>
 			</div>
