--- a/templates/public/contact.html.twig
+++ b/templates/public/contact.html.twig
@@ -11,6 +11,24 @@
 
 {% block css %}
 	{{ include('partials/scripts-header.html.twig') }}
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
+{% endblock %}
+
+{% block js %}
+	<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+
+	<script>
+		const map = L.map('myMap').setView([45.43775, 4.38107], 17);
+
+		const tiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+			maxZoom: 19,
+			attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+		}).addTo(map);
+
+		const marker = L.marker([45.43775, 4.38107]).addTo(map)
+			.bindPopup('Luxury Services,<br />42000 Saint-Étienne').openPopup();
+
+	</script>
 {% endblock %}
 
 {% block body %}
@@ -127,7 +145,7 @@
 					</div>
 				</section>
 			</form>
-			<div id="myMap" class="height-350">Gmap here</div>
+			<div id="myMap" class="height-350"></div>
 
 		</div>
 
