--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -135,13 +135,13 @@
 
 								<div class="existing-file">
 									{% if app.user.candidate.avatarFile %}
-										<a href="/uploads/avatars/{{ app.user.candidate.avatarFile }}" target="_blank">
+										<a href="/uploads/avatar/{{ app.user.candidate.avatarFile }}" target="_blank">
 											<i class="material-icons">&#xE24D;</i>
 											{{ app.user.candidate.avatarFile }}</a>
 									{% else %}
-										<span target="_blank">
+										<a href="#!" target="_blank">
 											<i class="material-icons">&#xE24D;</i>
-											Aucun fichier</span>
+											Aucun avatar</a>
 									{% endif %}
 								</div>
 								<div class="file-path-wrapper">
@@ -196,9 +196,15 @@
 										{# <input id="passport" size="20000000" accept=".pdf,.jpg,.doc,.docx,.png,.gif" name="passport" type="file"> #}
 									</div>
 									<div class="existing-file">
-										<a href="#!" target="_blank">
-											<i class="material-icons">&#xE24D;</i>
-											passeport.jpg</a>
+										{% if app.user.candidate.passportFile %}
+											<a href="/uploads/passport/{{ app.user.candidate.passportFile }}" target="_blank">
+												<i class="material-icons">&#xE24D;</i>
+												{{ app.user.candidate.passportFile }}</a>
+										{% else %}
+											<a href="#!" target="_blank">
+												<i class="material-icons">&#xE24D;</i>
+												Aucun passport</a>
+										{% endif %}
 									</div>
 									<div class="file-path-wrapper">
 										<input class="file-path validate" type="text" placeholder="Upload your passport" readonly>
@@ -215,9 +221,15 @@
 									</div>
 
 									<div class="existing-file">
-										<a href="#!" target="_blank">
-											<i class="material-icons">&#xE24D;</i>
-											CV.pdf</a>
+										{% if app.user.candidate.cvFile %}
+											<a href="/uploads/cv/{{ app.user.candidate.cvFile }}" target="_blank">
+												<i class="material-icons">&#xE24D;</i>
+												{{ app.user.candidate.cvFile }}</a>
+										{% else %}
+											<a href="#!" target="_blank">
+												<i class="material-icons">&#xE24D;</i>
+												Aucun CV</a>
+										{% endif %}
 									</div>
 									<div class="file-path-wrapper">
 										<input class="file-path validate" type="text" placeholder="Upload your Curriculum Vitae" readonly>
