--- a/templates/job_offer/index.html.twig
+++ b/templates/job_offer/index.html.twig
@@ -88,7 +88,7 @@
 											</div>
 											<div class="card-action">
 												<a class="btn btn-md primary border waves-effect waves-dark" href="{{ path('app_job_offer_show', {id: job.id}) }}">Details</a>
-												<a class="btn btn-md primary waves-effect waves-light" href="#!">Apply</a>
+												<a class="btn btn-md primary waves-effect waves-light" href="{{ path('app_candidacies', {id: job.id}) }}">Apply</a>
 											</div>
 										</div>
 									</div>
