--- a/templates/job_offer/show.html.twig
+++ b/templates/job_offer/show.html.twig
@@ -99,8 +99,17 @@
 											</span>-</li>
 										{% endif %}
 								</ul>
-								<a class="btn btn-block gradient primary mt-30 waves-effect waves-light" href="#!">Apply for this job</a>
+								{% set isApply = false %}
+								{% for candidacy in app.user.candidate.candidacies %}
+									{% if candidacy.jobOffer.id == jobOffer.id %}
+										{% set isApply = true %}
+									{% endif %}
+								{% endfor %}
+								{% if not isApply %}
+								<a class="btn btn-block gradient primary mt-30 waves-effect waves-light" href="{{ path('app_candidacies', {id: jobOffer.id}) }}">Apply for this job</a>
+								{% else %}
 								<div class="btn btn-block btn-success mt-30 waves-effect waves-light disabled">You have applied for this job</div>
+								{% endif %}
 							</div>
 						</div>
 					</div>
