--- a/templates/job_offer/show.html.twig
+++ b/templates/job_offer/show.html.twig
@@ -34,13 +34,13 @@
 							<ol class="breadcrumb">
 								<li>
 									<div class="portfolio-nav">
-										<a href="#!" class="waves-effect waves-dark">
+										<a href="{{ path('app_job_offer_show', {id: prevJob}) }}" class="waves-effect waves-dark">
 											<i class="fa fa-angle-left" aria-hidden="true"></i>
 											Prev</a>
 										<a href="{{ path('app_job_offer_index') }}" class="waves-effect waves-dark">
 											<i class="fa fa-th-large" aria-hidden="true"></i>
 										</a>
-										<a href="#!" class="waves-effect waves-dark">Next
+										<a href="{{ path('app_job_offer_show', {id: nextJob}) }}" class="waves-effect waves-dark">Next
 											<i class="fa fa-angle-right" aria-hidden="true"></i>
 										</a>
 									</div>
@@ -119,7 +119,7 @@
 
 							<div class="col-xs-6 col-sm-6 col-md-4">
 								<div class="previous-post-link">
-									<a class="btn border primary waves-effect waves-dark" href="#!">
+									<a class="btn border primary waves-effect waves-dark" href="{{ path('app_job_offer_show', {id: prevJob}) }}">
 										<i class="fa fa-long-arrow-left"></i>Previous
 									</a>
 								</div>
@@ -129,7 +129,7 @@
 
 							<div class="col-xs-6 col-sm-6 col-md-4">
 								<div class="next-post-link">
-									<a class="btn border primary waves-effect waves-dark" href="#!">
+									<a class="btn border primary waves-effect waves-dark" href="{{ path('app_job_offer_show', {id: nextJob}) }}">
 										Next
 										<i class="fa fa-long-arrow-right"></i>
 									</a>
